# speks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  speks.spec
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binary.yml  ci.yml
examples/credit-evaluation/: mkdocs.yml  speks.toml
examples/credit-evaluation/diagrams/: credit-flow.puml  decision-tree.mmd
examples/credit-evaluation/docs/: architecture.md  compliance.md  credit-rules.md  index.md
examples/order-processing/: mkdocs.yml  speks.toml
examples/patient-eligibility/: mkdocs.yml  speks.toml
examples/shipping-calculator/: mkdocs.yml  speks.toml
plantuml-server/: Dockerfile
scripts/: build_binary.py
speks/: __init__.py  __main__.py  cli.py
speks/assets/: speks.css
speks/core/: code_extractor.py  config.py  dependency_analyzer.py  git.py  parser.py  render.py  sequence_analyzer.py  styles.py  tag_resolvers.py  testcases.py
speks/engine/: mocking.py
speks/i18n/: __init__.py  en.py  fr.py
speks/mkdocs_plugins/: dependencies.py  plantuml.py  playground.py  sequence.py  tags.py  versioning.py
speks/web/: builder.py  server.py
tests/: test_builder.py  test_code_extractor.py  test_config.py  test_dependency_analyzer.py  test_git.py  test_mkdocs_plugins.py  test_mocking.py  test_parser.py  test_plantuml_plugin.py  test_render.py  test_run_api.py  test_sequence_analyzer.py  test_server.py  test_testcase_api.py  test_testcases.py  test_versioning.py
website/: Dockerfile  index.html  package-lock.json
website/src/: App.css  App.tsx  index.css
(+33 files in other folders)
